Fix git tag id. [bug]

--- a/lib/vclog/templates/history.atom.erb
+++ b/lib/vclog/templates/history.atom.erb
@@ -30,7 +30,7 @@
 
     <title><%= h tag.name %></title>
 
-    <id><%= url %>#<%= tag.revision %></id>
+    <id><%= url %>#<%= tag.id %></id>
 
     <author><name><%= h tag.author %><name></author>
 
