--- a/lib/vclog/templates/history.rss.erb
+++ b/lib/vclog/templates/history.rss.erb
@@ -36,11 +36,11 @@
 
       <author><%= tag.author %></author>
 
-      <link><%= url %>#<%= tag.revision %></link>
+      <link><%= url %>#<%= tag.id %></link>
 
       <pubDate><%= tag.date.rfc822 %></pubDate>
 
-      <guid isPermaLink="false"><%= url %>#<%= tag.revision %></guid>
+      <guid isPermaLink="false"><%= url %>#<%= tag.id %></guid>
 
       <description><![CDATA[
 
