--- a/lib/vclog/templates/history.xml.erb
+++ b/lib/vclog/templates/history.xml.erb
@@ -16,7 +16,7 @@
     <commit-group type="<%= changes[0].type %>" label="<%= changes[0].label %>">
       <% changes.sort{|a,b| b.date <=> a.date}.each do |entry| %>
       <commit>
-        <id><%= h entry.revision %></id>
+        <id><%= h entry.id %></id>
         <date><%= entry.date %></date>
         <author><%= h entry.author %></author>
         <type><%= h entry.type %></type>
